Various api cleanup for update to java 17